updated and added notes

--- a/notes.html
+++ b/notes.html
@@ -6,33 +6,23 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Daily Quotes - Inovalon</title>
+    <title>Daily Quotes - Notes</title>
 
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/custom.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <link href="./css/custom.js" rel="stylesheet">
 </head>
-
 <body>
 <main role="main" class="container">
 
-<h1 class="mt-5">Quote of the Day</h1>
+Websites - 
+https://tympanus.net/codrops/2013/03/29/quotes-rotator/
+https://www.w3schools.com/angular/angular_includes.asp
 
-<p class="lead">If everything seems under control, you're not going fast enough.</p>
-      
-<p>Mario Andretti</p>
+Next Steps - 
+Build rotator (angular reading from easy place to upload)
+Voting system (and show based on each day, how people feel).
 
 </main>
-
-<footer class="footer">
- 
-    <div class="container">
-    <span class="text-muted">Let's make this an amazing day!</span>
-    </div>
-    
-</footer>
-
-</body><loom-container id="lo-engage-ext-container"><loom-shadow classname="resolved"></loom-shadow></loom-container>
-
 </html>
