--- a/index.html
+++ b/index.html
@@ -11,28 +11,43 @@
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/custom.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="./js/custom.js"></script>
     
 </head>
 
 <body>
-<main role="main" class="container">
-
-<h1 style="padding-top:300px;" class="mt-5">Quote of the Day</h1>
-    <section ng-app="inovalonQuote" ng-controller="inovQuote as quote">
-        <p class="lead">{{quote.info.text}}</p>
-        <p>{{quote.info.textby}}</p>
-    </section>
+<main role="main">
+<div class="carousel slide carousel-fade" data-ride="carousel" data-interval="1800000">
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+        </div>
+        <div class="item">
+        </div>
+        <div class="item">
+        </div>
+        <div class="item">
+        </div>
+        <div class="item">
+        </div>
+    </div>
+</div>
+<div class="container">
+      <div class="jumbotron mt-3">
+        <h1>Quote of the Day</h1>
+        <section ng-app="inovalonQuote" ng-controller="inovQuote as quote">
+            <p class="lead">{{quote.info.text}}</p>
+            <p class="lead font-italic">{{quote.info.textby}}</p>
+        </section>
+      </div>
+</div>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script>
+      $('.carousel').carousel();
+      //# sourceURL=pen.js
+    </script>
 </main>
 
-<footer class="footer">
- 
-    <div class="container">
-    <span class="text-muted">Let's make this an amazing day! </span>
-    </div>
-    
-</footer>
-
 </body><loom-container id="lo-engage-ext-container"><loom-shadow classname="resolved"></loom-shadow></loom-container>
-
 </html>
